@@ -121,26 +121,40 @@ static void FreeManualEvent(ManualEvent ME)
 
 static void WaitForManualEvent(ManualEvent ME)
 {
-    g_mutex_lock(condMutex);
-    if (!ME->signalled)
-        g_cond_wait(ME->cond, condMutex);
+	GTimeVal tv;
+	g_debug("wait for manual event locks");
+	g_mutex_lock(condMutex);
+	while (!ME->signalled) {
+		g_debug("waiting for manual event");
+		g_get_current_time(&tv);
+		g_time_val_add(&tv, 10 * 1000 * 1000);
+		if (g_cond_timed_wait(ME->cond, condMutex, &tv))
+			break;
+		else
+			g_debug("still waiting for manual event");
+	}
 
-    g_mutex_unlock(condMutex);
+	g_mutex_unlock(condMutex);
+	g_debug("wait for manual event unlocks");
 }
 
 static void ResetManualEvent(ManualEvent ME)
 {
+	g_debug("reset manual event locks");
     g_mutex_lock(condMutex);
     ME->signalled = FALSE;
     g_mutex_unlock(condMutex);
+	g_debug("reset manual event unlocks");
 }
 
 static void SetManualEvent(ManualEvent ME)
 {
+	g_debug("reset manual event locks");
     g_mutex_lock(condMutex);
     ME->signalled = TRUE;
     g_cond_broadcast(ME->cond);
     g_mutex_unlock(condMutex);
+	g_debug("reset manual event unlocks");
 }
 
 static void InitMutex(Mutex *pMutex)
@@ -267,6 +281,7 @@ static Task *MT_GetTask(void)
 static void MT_AbortTasks(void)
 {
     Task *task;
+    g_debug("abort tasks: lock");
     Mutex_Lock(td.queueLock);
 
     /* Remove tasks from list */
@@ -274,15 +289,18 @@ static void MT_AbortTasks(void)
         MT_TaskDone(task);
 
     Mutex_Release(td.queueLock);
+    g_debug("abort tasks: release");
 }
 
 static int MT_DoTask(void)
 {
     int alive = TRUE;
     Task *task;
+    g_debug("do tasks: lock");
     Mutex_Lock(td.queueLock);
     task = MT_GetTask();
     Mutex_Release(td.queueLock);
+    g_debug("do tasks: release");
 
     if (task)
     {
@@ -323,9 +341,11 @@ AnalyzeDoubleDecison:
             alive = FALSE;
             break;
         }
+	g_debug("task done: lock");
         Mutex_Lock(td.queueLock);
         MT_TaskDone(task);
         Mutex_Release(td.queueLock);
+	g_debug("task done: release");
         return alive;
     }
     else
@@ -444,7 +464,10 @@ extern void MT_InitThreads(void)
 void MT_AddTask(Task *pt, gboolean lock)
 {
 	if (lock)
+	{
+		g_debug("add task: lock");
 		Mutex_Lock(td.queueLock);
+	}
 	td.addedTasks++;
 	td.tasks = g_list_append(td.tasks, pt);
 	if (g_list_length(td.tasks) == 1)
@@ -453,12 +476,16 @@ void MT_AddTask(Task *pt, gboolean lock)
 		SetManualEvent(td.activity);
 	}
 	if (lock)
+	{
 		Mutex_Release(td.queueLock);
+		g_debug("add task: release");
+	}
 }
 
 void mt_add_tasks(int num_tasks, TaskType tt, gpointer linked)
 {
 	int i;
+	g_debug("add many tasks: lock");
     	Mutex_Lock(td.queueLock);
 	td.totalTasks = num_tasks;
 	for (i = 0; i < num_tasks; i++)
@@ -469,6 +496,7 @@ void mt_add_tasks(int num_tasks, TaskType tt, gpointer linked)
 		MT_AddTask((Task*)pt, FALSE);
 	}
     	Mutex_Release(td.queueLock);
+	g_debug("add many release: lock");
 }
 
 int MT_WaitForTasks(void (*pCallback)(), int callbackTime)
@@ -478,13 +506,16 @@ int MT_WaitForTasks(void (*pCallback)(), int callbackTime)
     int callbackLoops = callbackTime / UI_UPDATETIME;
     int waits = 0;
 
+    g_debug("wait for tasks: lock(1)");
     Mutex_Lock(td.queueLock);
     td.totalTasks = td.addedTasks;
     if (td.doneTasks == td.totalTasks)
         done = TRUE;
     Mutex_Release(td.queueLock);
+    g_debug("wait for tasks: release(1)");
     if (!done)
     {
+	    g_debug("while waiting for all tasks");
         while (!WaitForAllTasks(UI_UPDATETIME))
         {
             waits++;
@@ -503,6 +534,7 @@ int MT_WaitForTasks(void (*pCallback)(), int callbackTime)
             ResumeInput();
 #endif
         }
+	    g_debug("done while waiting for all tasks");
     }
     /* Reset counters */
     td.totalTasks = td.addedTasks = td.doneTasks = 0;
